# open-harness-atlas

./: .env.example  .gitattributes  .gitignore  BRAND.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-DOCS  Makefile  README.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: add-entry.md  dispute.md  update-entry.md
.github/workflows/: pages.yml  refresh-metadata.yml  release.yml  validate.yml
companion/: README.md  _supply_chains.schema.yaml  _use_cases.schema.yaml  supply_chains.yaml  use_cases.yaml
companion/domain/: open-harnesses.yaml
docs/: CURATION_BACKLOG.md  ROADMAP.md  adjacencies.md  agent-matrix.md  deployment-posture.md  education-matrix.md  eval-matrix.md  fable-mythos-pattern-fire.md  five-component-overlay.md  governance-matrix.md  redteam-matrix.md  rising.md  routing-matrix.md  sovereignty-rubric.md  taxonomy.md  the-harness-paradigm-summary.md  worked-example-model-agnostic-stack.md
docs/patterns/: README.md  audit-log-fsm-escalation.md  eval-driven-gate.md  local-possible-spine.md  multi-tenant-policy-isolation.md  provider-fallback-chain.md  redteam-then-harden.md  sovereignty-preserving-routing.md
registry/: _TEMPLATE.yaml  _schema.yaml
registry/_metadata/: 9router.json  _deployment.json  _tiers.json  _velocity.json  a3m-router.json  adala-data-agents.json  adalflow.json  adarubrics.json  adrian.json  adversarial-robustness-toolbox.json  aegisgate.json  aeromind-paper.json  ag-ui.json  ag2.json  agency-agents-zh.json  agency-swarm.json  agent-arena.json  agent-attack.json  agent-audit.json  agent-eval-arena.json  agent-eval-harness.json  agent-framework.json  agent-governance-toolkit.json  agent-guardrails-template.json  agent-reach.json  agent-s.json  agent-security-scanner-mcp.json  agent-semantic-resistance.json  agent-sports-league-sdk.json  agent.json  agenta.json  agentbench-thudm.json  agentbench.json  agentdojo.json  agentflow-grpo.json  agentforge.json  agentgate-ai.json  agentgpt.json  agentic-guardrails.json  agentic-radar.json  (+854 more)
registry/agent/: 9router.yaml  adala-data-agents.yaml  adalflow.yaml  (+285 more)
scripts/: _atomic.py  build_companion_domain.py  build_graph.py  build_matrices.py  build_visuals.py  compute_deployment_posture.py  compute_tier.py  compute_velocity.py  refresh_metadata.py  validate_registry.py
tests/: __init__.py  conftest.py  test_atomic_write.py  test_companions.py  test_csp_sri.py  test_data_missing.py  test_graph_payload.py  test_hero_card.py  test_registry_schema.py  test_registry_unique_ids.py  test_tier_velocity.py
visuals/: 2d.html  README.md  graph-data.json  index.html
(+664 files in other folders)
